--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@racehub-io/f1-telemetry-client": "^0.2.6",
     "dgram": "^1.0.1",
+    "dotenv": "^14.3.2",
+    "mongoose": "^6.1.8",
     "udp-json": "^1.2.1"
   }
 }
