--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dgram": "^1.0.1",
     "dotenv": "^14.3.2",
     "mongoose": "^6.1.8",
+    "nodemon": "^2.0.15",
     "udp-json": "^1.2.1"
   }
 }
